--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.7.0",
+    "react-accessible-accordion": "^2.4.5",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.1"
   },
