--- a/package.json
+++ b/package.json
@@ -23,7 +23,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "html2canvas": "^1.0.0-alpha.12"
-  }
+  "devDependencies": {}
 }
