--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-accessible-accordion": "^2.4.5",
+    "react-color": "^2.17.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.1"
   },
